--- a/.gitmodules
+++ b/.gitmodules
@@ -269,6 +269,13 @@
 [submodule "orderless"]
 	path = lib/orderless
 	url = git@github.com:oantolin/orderless.git
+[submodule "org"]
+	path = lib/org
+	url = git@github.com:emacsmirror/org.git
+	build-step = make compile
+    build-step = borg-update-autoloads
+	load-path = lisp
+    load-path = etc
 [submodule "org-anki"]
 	path = lib/org-anki
 	url = git@github.com:eyeinsky/org-anki.git
