feat: Assimilate keycast v1.2.0-25-g4fc14c7

--- a/.gitmodules
+++ b/.gitmodules
@@ -210,6 +210,9 @@
 [submodule "js2-mode"]
 	path = lib/js2-mode
 	url = git@github.com:mooz/js2-mode.git
+[submodule "keycast"]
+	path = lib/keycast
+	url = git@github.com:Elilif/keycast.git
 [submodule "keyfreq"]
 	path = lib/keyfreq
 	url = git@github.com:dacap/keyfreq.git
