--- a/.gitmodules
+++ b/.gitmodules
@@ -84,6 +84,9 @@
 [submodule "closql"]
 	path = lib/closql
 	url = git@github.com:emacscollective/closql.git
+[submodule "compat"]
+	path = lib/compat
+	url = git@github.com:emacsmirror/compat.git
 [submodule "consult"]
 	path = lib/consult
 	url = git@github.com:minad/consult.git
@@ -440,6 +443,11 @@
 [submodule "treepy"]
 	path = lib/treepy
 	url = git@github.com:volrath/treepy.el.git
+[submodule "vertico"]
+	path = lib/vertico
+	url = git@github.com:minad/vertico.git
+    load-path = .
+    load-path = extensions
 [submodule "visual-fill-column"]
 	path = lib/visual-fill-column
 	url = git@github.com:emacsmirror/visual-fill-column.git
