--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "ace-window"]
+	path = site-lisp/ace-window
+	url = https://github.com/abo-abo/ace-window
 [submodule "aggressive-indent"]
 	path = site-lisp/aggressive-indent
 	url = https://github.com/Malabarba/aggressive-indent-mode
