feat: Assimilate ace-pinyin 0.2.5-17-g47662c0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "ace-pinyin"]
+	path = site-lisp/ace-pinyin
+	url = https://github.com/cute-jumper/ace-pinyin
 [submodule "ace-window"]
 	path = site-lisp/ace-window
 	url = https://github.com/abo-abo/ace-window
