feat: Assimilate ledger-mode v4.0.0-158-ge74fe9e8

--- a/.gitmodules
+++ b/.gitmodules
@@ -167,6 +167,9 @@
 [submodule "keycast"]
 	path = site-lisp/keycast
 	url = https://github.com/tarsius/keycast
+[submodule "ledger-mode"]
+	path = site-lisp/ledger-mode
+	url = https://github.com/ledger/ledger-mode
 [submodule "leetcode"]
 	path = site-lisp/leetcode
 	url = https://github.com/Elilif/leetcode.el
