--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "ace-window"]
 	path = site-lisp/ace-window
 	url = https://github.com/abo-abo/ace-window
+[submodule "ag"]
+	path = site-lisp/ag
+	url = https://github.com/Wilfred/ag.el
 [submodule "aggressive-indent"]
 	path = site-lisp/aggressive-indent
 	url = https://github.com/Malabarba/aggressive-indent-mode
@@ -406,6 +409,9 @@
 [submodule "websocket"]
 	path = site-lisp/websocket
 	url = https://github.com/ahyatt/emacs-websocket
+[submodule "wgrep"]
+	path = site-lisp/wgrep
+	url = https://github.com/mhayashi1120/Emacs-wgrep
 [submodule "whisper"]
 	path = site-lisp/whisper
 	url = https://github.com/natrys/whisper.el
