--- a/.gitmodules
+++ b/.gitmodules
@@ -385,6 +385,9 @@
 [submodule "skewer-mode"]
 	path = site-lisp/skewer-mode
 	url = https://github.com/skeeto/skewer-mode
+[submodule "smart-mark"]
+	path = site-lisp/smart-mark
+	url = https://github.com/Elilif/smart-mark
 [submodule "smartparens"]
 	path = site-lisp/smartparens
 	url = https://github.com/Fuco1/smartparens
